--- a/Project3Hangman/Project3Hangman.csproj
+++ b/Project3Hangman/Project3Hangman.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="DataAdapter.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="GameActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
