--- a/Project3Hangman/Properties/AndroidManifest.xml
+++ b/Project3Hangman/Properties/AndroidManifest.xml
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          android:versionCode="1" 
-          android:versionName="1.0" 
-          package="Project3Hangman.Project3Hangman">
-  <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
-  <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
-  </application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Project3Hangman.Project3Hangman" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
+	<application android:allowBackup="true" android:icon="@drawable/hangman8" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
 </manifest>
