--- a/Project3Hangman/Project3Hangman.csproj
+++ b/Project3Hangman/Project3Hangman.csproj
@@ -57,11 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Player.cs" />
+    <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="RoundEndActivity.cs" />
     <Compile Include="DataAdapter.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="HangmanActivity.cs" />
-    <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="words.cs" />
   </ItemGroup>
@@ -154,10 +154,10 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\winner.png" />
+    <AndroidResource Include="Resources\drawable\winner.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\loser.png" />
+    <AndroidResource Include="Resources\drawable\loser.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
