--- a/Project3Hangman/Project3Hangman.csproj
+++ b/Project3Hangman/Project3Hangman.csproj
@@ -185,6 +185,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\gradient_bg_hover.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\animals.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\countries.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 		Other similar extension points exist, see Microsoft.Common.targets.
